Adds GitHub OAuth and Swagger security
