# routes/users.js
@@ -1,12 +1,13 @@
 const express = require('express');
 const usersController = require('../controllers/users');
+const { isAuthenticated } = require('../middleware/authenticate');
 
 const router = express.Router();
 
 router.get('/', usersController.getAll);
 router.get('/:id', usersController.getSingle);
-router.post('/', usersController.createUser);
-router.put('/:id', usersController.updateUser);
-router.delete('/:id', usersController.deleteUser);
+router.post('/', isAuthenticated, usersController.createUser);
+router.put('/:id', isAuthenticated, usersController.updateUser);
+router.delete('/:id', isAuthenticated, usersController.deleteUser);
 
 module.exports = router;
